Fixed Minor Bugs
-Changed Transform.h and Transform.cpp to Transformation.h and Transformation.cpp, for continuity.
-Fixed Minor Bugs, allowing the program to run now

--- a/Asteroids/Asteroids.vcxproj.filters
+++ b/Asteroids/Asteroids.vcxproj.filters
@@ -42,7 +42,7 @@
     <ClCompile Include="SpriteRenderer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Transform.cpp">
+    <ClCompile Include="Transformation.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -68,7 +68,7 @@
     <ClInclude Include="SpriteRenderer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Transform.h">
+    <ClInclude Include="Transformation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
