--- a/Asteroids/Asteroids.vcxproj
+++ b/Asteroids/Asteroids.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
+    <ClCompile Include="Audio.cpp" />
     <ClCompile Include="Component.cpp" />
     <ClCompile Include="DynamicArray.cpp" />
     <ClCompile Include="EngineAPI.cpp" />
@@ -28,10 +29,12 @@
     <ClCompile Include="Resource.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="SpaceCraft.cpp" />
+    <ClCompile Include="Sprite2D.cpp" />
     <ClCompile Include="SpriteRenderer.cpp" />
     <ClCompile Include="Transformation.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Audio.h" />
     <ClInclude Include="Component.h" />
     <ClInclude Include="DynamicArray.h" />
     <ClInclude Include="EngineAPI.h" />
@@ -39,6 +42,7 @@
     <ClInclude Include="Math.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="SpaceCraft.h" />
+    <ClInclude Include="Sprite2D.h" />
     <ClInclude Include="SpriteRenderer.h" />
     <ClInclude Include="Transformation.h" />
   </ItemGroup>
