--- a/Asteroids/Asteroids.vcxproj
+++ b/Asteroids/Asteroids.vcxproj
@@ -22,12 +22,14 @@
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="Asteroid.cpp" />
     <ClCompile Include="Audio.cpp" />
+    <ClCompile Include="CircleCollider2D.cpp" />
     <ClCompile Include="Component.cpp" />
     <ClCompile Include="DynamicArray.cpp" />
     <ClCompile Include="EngineAPI.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Math.cpp" />
+    <ClCompile Include="PhysicsManager.cpp" />
     <ClCompile Include="PlayerController.cpp" />
     <ClCompile Include="Resource.cpp" />
     <ClCompile Include="RigidBody2D.cpp" />
@@ -40,12 +42,14 @@
   <ItemGroup>
     <ClInclude Include="Asteroid.h" />
     <ClInclude Include="Audio.h" />
+    <ClInclude Include="CircleCollider2D.h" />
     <ClInclude Include="Component.h" />
     <ClInclude Include="DynamicArray.h" />
     <ClInclude Include="EngineAPI.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Math.h" />
+    <ClInclude Include="PhysicsManager.h" />
     <ClInclude Include="PlayerController.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="RigidBody2D.h" />
