Added Diagrams and Fixed Bug
-Added Class Diagrams
-Fixed Bug where points can still be earned when it is game over

--- a/Asteroids/Asteroids.vcxproj
+++ b/Asteroids/Asteroids.vcxproj
@@ -60,6 +60,11 @@
     <ClInclude Include="SpriteRenderer.h" />
     <ClInclude Include="Transformation.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resource.cd" />
+    <None Include="Engine and Managers.cd" />
+    <None Include="GameObject and Components.cd" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
